Description
I think it would be nice to add some animation to startup/shutdown/logon dialog (msgina), in order to indicate the system loading progress, and see if, in which case, the system hangs at boot.
Win2k3 has such animation in this dialogs, below the windows version logo, which is, in essence, bitmap image moving from left to right:

It doesn't move only in logon dialog (when typing uername and password).
I drew the animation similar to w2k3's, but in ReactOS style (the same as at the bottom of the ROS bootscreen):

Also 256-colors version attached:

I would like it to be added into ReactOS, but I can't do it, since I don't know C/C++ language as well.
Attachments
Issue Links
- blocks
-
CORE-16775 Shutdown dialog is not destroyed in Limbo x86 PC Emulator
-
- Resolved
-
-
CORE-16697 [MSGINA] Improve logo-related display
-
- Resolved
-
- is blocked by
-
CORE-15851 MSGINA should perform login asynchronously
-
- Open
-