[MSGINA] Implement rotation bar animation

Based on initial work by Bisoc George. Rotation bar image by Zcooger. CORE-15215